Compatibility to older Java versions